# satisfaction

./: CLAUDE.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
satellite/: assignments.py  choice.py  dpll.py  expr.py  format.py  index.py  indexed.py  parallel.py  tseitin.py  typing.py  utils.py
satellite/examples/: queens.py
satellite/solvers/: dpll.py  index.py  indexed.py  parallel.py  solver.py
satisfaction/: assignments.py  expr.py  format.py  layered.py  tseitin.py  utils.py
satisfaction/examples/: benchmark.py  queens.py
satisfaction/solvers/: cdcl.py  dpll.py  indexed.py  solver.py
tests/: test_assignments.py  test_choice.py  test_dpll.py  test_expr.py  test_format.py  test_index.py  test_indexed.py  test_layered.py  test_parallel.py  test_queens.py  test_tseitin.py  test_utils.py
tests/solvers/: base_suite.py  test_cdcl.py  test_dpll.py  test_index.py  test_indexed.py  test_parallel.py
